fix: too large of a margin for small mobiles

--- a/src/styles/pages/work.sass
+++ b/src/styles/pages/work.sass
@@ -5,7 +5,7 @@
         display: inherit
         grid-template-rows: repeat(auto, 4)
         justify-items: center
-        margin: 0 1.5em 2em
+        margin: 0 0.5em 2em
 
         #project-title
             margin: 1em 0
@@ -21,6 +21,9 @@
                 padding: 0 0.5em
                 margin: 0 0.5em
 
+        // TABLET
+        @media screen and (min-width: $tablet) and (max-width: $desktop - 1) and (min-height: $tablet)
+            margin: 0 1.5em 2em
 
 
     
